# moral-realism

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  DDD架构说明.md  DDD架构说明_part1.md  DDD架构说明_part2.md  Dockerfile  GIT_HISTORY.md  LICENSE  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  check_db.py  check_relations.py  coverage.xml  create_missing_rounds.py  data.xlsx  debug_arima.py  debug_each_country.py  docker-compose.dev.yml  docker-compose.yml  domestic_clean_descriptive_stats.md  domestic_clean_holdout_class_table.csv  domestic_clean_holdout_overall_table.csv  domestic_clean_metrics.json  domestic_clean_model.joblib  domestic_clean_model_selection_table.csv  domestic_clean_predictions_2025.csv  domestic_clean_predictions_2026.csv  domestic_clean_recursive_backtest.csv  domestic_clean_report_tables.md  domestic_clean_with_2025.csv  domestic_conflict_pipeline_clean.py  fix_vue.py  fix_vue2.py  fix_vue3.py  fix_vue4.py  fix_vue5.py  (+52 more)
.github/workflows/: cd.yml  ci.yml
.omc/: project-memory.json
.omc/sessions/: 0fb43f61-31e5-4485-9296-8b65615bf55f.json  1d41bc5a-c32d-49c0-81be-5d97f26b394b.json  29661e0e-e11d-49ba-b440-1c3d86091953.json  441cef98-7bbd-4c3f-9fb5-44713518186b.json  d16eff67-80f0-4ec5-9c8e-e50337860775.json  e9427903-d192-47a9-92c7-a168870cfdcb.json
.omc/state/: hud-state.json  hud-stdin-cache.json  last-tool-error.json
api/: __init__.py  main.py
api/models/: __init__.py  schemas.py
api/routes/: agents.py  checkpoints.py  metrics.py  simulation.py
api/services/: __init__.py  websocket_manager.py
api/websockets/: __init__.py
app/: main.py
app/api/: __init__.py  action_config.py  agent_neighbor.py  analysis.py  cinc.py  llm_calls.py  preset_scene.py  router.py  simulation.py  statistics.py  strategic_relationship.py  system.py
app/config/: __init__.py  database.py  logging_config.py
app/core/: __init__.py  action_manager.py  agent_base.py  cinc_calculator.py  cinc_data_loader.py  cinc_power_update.py  decision_engine.py  decision_validation.py  environment.py  geography_data.py  interaction_engine.py  klein_equation.py  leader_profiles.py  llm_concurrency.py  order_determination.py  power_update.py  prompt_templates.py
app/models/: __init__.py  action_config.py  action_record.py  agent_config.py  agent_neighbor.py  agent_power_history.py  follower_relation.py  llm_call_log.py  preset_scene.py  simulation_project.py  simulation_round.py  strategic_goal_evaluation.py  strategic_relationship.py  system_config.py
app/scripts/: backfill_llm_logs.py  cleanup_duplicate_relationships.py
app/services/: agent_neighbor_service.py  agent_service.py  analysis_service.py  goal_evaluation_service.py  llm_service.py  project_service.py  relationship_evolution_service.py  scene_service.py  (+5 more)
backend/: __init__.py  main.py
config/: __init__.py  agent_templates.py  development.yaml  event_config.py  leader_types.py  order_types.py  production.yaml  settings.py  test.yaml
core/: __init__.py  environment.py  event_generator.py  event_impact.py  llm_engine.py  logging_config.py  performance.py  prompt_engine.py  security.py  storage.py  validator.py
data/: abm_simulation.db  experiment_data.json  organized_data.json
deploy/: README.md
docs/: ARCHITECTURE.md  COMPREHENSIVE_VALIDATION_REPORT.md  DEPLOYMENT.md  Ebert.docx  Ebert.txt  Ebert_briefing_note.docx  Ebert_briefing_note.txt  Ebert_peer_review.md  ID4不一致性分析与调整方案.md  ID5_VALIDATION_DIAGNOSIS.md  ID7_ROOT_CAUSE_ANALYSIS.md  ID7_VALIDATION_DIAGNOSIS.md  TECHNICAL_DOCUMENTATION.md  UK_Asquith_LloydGeorge_leadership_research.docx  UK_Asquith_LloydGeorge_leadership_research.txt  WWI_Historical_Analysis_1913_1925.md  _build_docx_pandoc.py  _convert_3_docs.py  _pandoc_ref.docx  api-reference.md  configuration.md  experiment_report_simulation_1.md  extract_id4_data.py  follower_mechanism_patch.py  franz_joseph_july_crisis_research.md  generate_charts.py  generate_charts_id5.py  getting-started.md  id5_validation_results.json  id5_validation_results_v2.json  id7_validation_results.json  peer_review_history.md  peer_review_plan.md  peer_review_r1_historical.md  peer_review_r1_test.md  peer_review_r2_abm.md  peer_review_r2_scholarly_depth.md  peer_review_r3_consistency.md  peer_review_r4_gaps.md  peer_review_report.md  (+24 more)
entities/: __init__.py  base_agent.py  great_power.py  interaction_rules.py  power_system.py  small_state_agent.py  state_agent.py
frontend/: .eslintrc.js  .prettierrc  Dockerfile  README.md  __init__.py  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-entry.html  vite.config.js  vite.config.ts
monitoring/: __init__.py  alerts.py  metrics.py
observation/: __init__.py  analytics.py  decision_engine.py  experiments.py  metrics.py  workflow.py
scripts/: analyze_s1g1.py  backup.sh  check_report.py  clean_ai_tics.py  deploy.ps1  deploy.sh  find_tics.py  generate_extended_figures.py  generate_figures.py  migrate.sh
services/: __init__.py
src/: __init__.py
test/: README.md  __init__.py  conftest.py  pytest.ini  test_backend_smoke.py  test_e2e_integration.py  test_frontend_smoke.py
tests/: __init__.py  conftest.py  test_enhanced_actions.py  test_phase1.py  test_phase2.py  test_phase2_enhancements.py  test_phase2_minimal.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_prompt_engine.py  test_runner.py
workflows/: __init__.py  multi_round.py  parallel_simulation.py  single_round.py
(+421 files in other folders)
